--- a/index.html
+++ b/index.html
@@ -3,52 +3,45 @@
 <head>
     <meta charset="utf-8">
     <title>Calculator</title>
-
-    <link  rel="stylesheet" href="css/scss/build/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="calc">
-        <div class="screen"></div>
-        <div class="numbers">
-            <div class="layout"></div>
-
-        </div>
-        <div class="operators"></div>
+<div class="container clearfix">
+    <div class="calculator clearfix">
+        <input type="text"/>
     </div>
-
-    <table class="calc">
-        <tr>
-            <button>
-            </button>
-
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-        </tr>
-        <tr>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-        </tr>
-        <tr>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-        </tr>
-        <tr>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-        </tr>
-        <tr>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-            <td>Num</td>
-        </tr>
-    </table>
+    <div class="calculator-buttons clearfix">
+        <div class="row clearfix">
+            <button>C</button>
+            <button>+/-</button>
+            <button>%</button>
+            <button class="operator">/</button>
+        </div>
+        <div class="row clearfix">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="operator">*</button>
+        </div>
+        <div class="row clearfix">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="operator">-</button>
+        </div>
+        <div class="row clearfix">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="operator">+</button>
+        </div>
+        <div class="row clearfix">
+            <button class="flex-2">0</button>
+            <button>.</button>
+            <button class="operator">=</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
