--- a/index.html
+++ b/index.html
@@ -9,39 +9,40 @@
 <body>
 <div class="container clearfix">
     <div class="calculator clearfix">
-        <input type="text"/>
+        <input type="input-text" value="0"/>
         <div class="calculator-buttons clearfix">
             <div class="row clearfix">
-                <button>C</button>
+                <button data-operator="clean">AC</button>
                 <button>+/-</button>
                 <button>%</button>
-                <button class="operator">/</button>
+                <button data-operator="/" class="operator">/</button>
             </div>
             <div class="row clearfix">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button class="operator">*</button>
+                <button data-value="7">7</button>
+                <button data-value="8">8</button>
+                <button data-value="9">9</button>
+                <button data-operator="*" class="operator">*</button>
             </div>
             <div class="row clearfix">
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button class="operator">-</button>
+                <button data-value="4">4</button>
+                <button data-value="5">5</button>
+                <button data-value="6">6</button>
+                <button data-operator="-" class="operator">-</button>
             </div>
             <div class="row clearfix">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button class="operator">+</button>
+                <button data-value="1">1</button>
+                <button data-value="2">2</button>
+                <button data-value="3">3</button>
+                <button data-operator="+" class="operator">+</button>
             </div>
             <div class="row clearfix">
-                <button class="flex-2">0</button>
-                <button>.</button>
-                <button class="operator">=</button>
+                <button data-value="0" class="flex-2">0</button>
+                <button data-operator=".">.</button>
+                <button data-operator="result" class="operator">=</button>
             </div>
         </div>
     </div>
 </div>
+<script ></script>
 </body>
 </html>
